Added image to Timera post

--- a/_posts/2014-01-06-timera.md
+++ b/_posts/2014-01-06-timera.md
@@ -9,6 +9,8 @@ I am, so I developed one.
 
 Along with [Justyna Marczewska](http://justynamarczewska.com) (awesome designer from Warsaw), we created a camera timer app with a simple interface and a great user experience.
 
+![Timera](/posts_images/2014-01-06-timera-00.jpeg)
+
 It's name is Timera (camera + timer) and it's [available for free in the App Store](https://itunes.apple.com/us/app/timera/id775995943?mt=8). 
 
 Go and get it!!
